test/parser/Queries/syntax_errors/fail_K-ForExprWithout-45.xq
(** $ * where **** let ************************* where foo******************** let *)
:foo Test: K-ForExprWithout-45 foo                 eq    $      ne     :
(: Written by: Frans Englich           where    $                 :)
(:  where Date: 2006-10-05T18:29:37+02:00     where  foo   foo               :)
(: Purpose: Variable which is not infoo scope.             :)
(:**foo*** $ * eq ***** let * eq * eq * $ *******foo*** eq ** ne ****************** $ *********:)
for $a in (1, 2), $b in (1, 2), $c in (1, 2) return foo1, $c